# xxlib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vs2019.sln  vs2022.sln
3rd/: ajson.hpp  function2.hpp  http_parser.c  ikcp.c  svpng.inc
adxe_lua_ex_bak/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h  adxe_lua.vcxproj  adxe_lua_ext.h  main.lua  proj_config.txt
codegen_test1/: foo.cs  foo.json  gen_foo.bat  master.cs  master.json  p1.cs  p1.json  p2.cs  p2.json  shared.cs  shared.json
codegen_test2/: gen.bat  gen_pkg.bat  pkg.cs  pkg.json  pkg_db.cs  pkg_db.json  pkg_db_service.cs  pkg_db_service.json  pkg_game_client.cs  pkg_game_client.json  pkg_game_lobby.cs  pkg_game_lobby.json  pkg_generic.cs  pkg_generic.json  pkg_lobby.cs  pkg_lobby.json  pkg_lobby_client.cs  pkg_lobby_client.json
codegen_test3/: gen_ss.bat  ss.cs  ss.json
js_tests/: a.html  test.cpp  test.html  test.wasm  xx_data.js  xx_data.ts  xx_data_bigint.ts
shoot_game_bak/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h  MainScene.cpp  MainScene.h  main.cpp
src/: CMakeLists.txt  src.vcxitems  xx_asio.h  xx_asio_codes.h  xx_asio_gateway_client.h  xx_asio_gateway_helpers.h  xx_asio_ioc.h  xx_asio_kcp_gateway_client.h  xx_asio_request.h  xx_asio_tcp_base.h  xx_asio_tcp_base_http.h  xx_asio_tcp_client.h  xx_asio_tcp_client_cpp.h  xx_asio_tcp_gateway_client.h  xx_asio_tcp_gateway_client_cpp.h  xx_asio_udp_base.h  xx_asiokcpclient.h  xx_bits.h  xx_bufholder.h  xx_combopool.h  xx_coro.h  xx_coro_simple.h  xx_coros.h  xx_data.h  xx_data_funcs.h  xx_data_lua.h  xx_data_queue.h  xx_data_shared.h  xx_data_v.h  xx_dict.h  xx_dict_mk.h  xx_downloader.h  xx_ebml_parser.h  xx_epoll.h  xx_epoll_http.h  xx_epoll_kcp.h  xx_epoll_omhelpers.h  xx_epoll_task.h  xx_file.h  xx_grid2d.h  (+47 more)
tips/: apk_commit.txt  build libvpx.txt  cmake_compile_debug_release.txt  esxi_synology_install_tips.txt  godot_GDNative_debug.txt  performance opts.txt  png2vpx.txt  ubuntu install depends.txt  ubuntu install llvm.txt  ubuntu support mstsc remote.txt  ubuntu upgrade cmake.txt  ubuntu upgrade gcc.txt  ubuntu upgrade kernel.txt  winserver2022_un_defender.txt
tool_circle_line_editor/: AppDelegate.cpp  AppDelegate.h  CMakeLists.txt  HelloWorldScene.cpp  HelloWorldScene.h  main.cpp
tool_dupe_file_cleaner/: dupe_file_cleaner.vcxproj  main.cpp
tool_png_trim/: main.cpp
tool_unsafe_word_rplacer/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  UnsafeWordReplacer.csproj  UnsafeWordReplacer.sln  packages.config
tool_win32_loader/: loader.sln  需求分析.txt
tools/: tools.sln
tools_codegen_test1/: gen_cfg.json  p1.cs  p2.cs  p2.json  pkg.cs  shared.cs
xx_asio_test1/: CMakeLists.txt  main.cpp  xx_asio_test1.vcxproj  xx_asio_test1.vcxproj.filters
xx_asio_test2/: CMakeLists.txt  listener.cpp  listener.h  main.cpp  peer.cpp  peer.h  server.cpp  server.h  ss.cs  ss.h  ss.json  ss_SSBullet.inc  ss_SSBullet_Straight.inc  ss_SSControlState.inc  ss_SSScene.inc  ss_SSShooter.inc  ss_SSXY.inc  ss_ajson.h  ss_ex.cpp  tasktimer.h  xx_asio_test2.vcxproj  xx_asio_test2.vcxproj.filters  xx_math.h
xx_asio_test3/: CMakeLists.txt  main.cpp  xx_asio_test3.vcxproj  xx_asio_test3.vcxproj.filters  xx_asiokcpclient.h
xx_asio_test6/: CMakeLists.txt  g_coro.lua  g_net.lua  lib.lua  main.cpp  main.lua  performance test.txt  pkg.cs  pkg.json  pkg.lua  xx_asio_test6.vcxproj  xx_asio_test6.vcxproj.filters
xx_asio_testC/: CMakeLists.txt  main.cpp  xx_asio_testC.vcxproj  xx_asio_testC.vcxproj.filters
xx_asio_testD/: CMakeLists.txt  db.h  main.cpp  sqlite.h  xx_asio_testD.vcxproj  xx_asio_testD.vcxproj.filters
xx_asio_testG/: CMakeLists.txt  main.cpp  xx_asio_testG.vcxproj  xx_asio_testG.vcxproj.filters
xx_epoll_test1/: CMakeLists.txt  config.h  config.json  cpeer.cpp  cpeer.h  dialer.cpp  dialer.h  listener.cpp  listener.h  main.cpp  peer.cpp  peer.h  pingtimer.cpp  pingtimer.h  server.cpp  server.h  speer.cpp  speer.h  tasktimer.cpp  tasktimer.h
xx_epoll_test2/: CMakeLists.txt  config.h  config.json  cpeer.cpp  cpeer.h  dialer.cpp  dialer.h  kpeer.cpp  kpeer.h  listener.cpp  main.cpp  pingtimer.cpp  server.cpp  server.h  speer.cpp  speer.h  tasktimer.cpp
xx_epoll_test3/: CMakeLists.txt  apeer.cpp  apeer.h  config.h  config.json  db.cpp  db.h  dbdialer.cpp  dbdialer.h  dbpeer.cpp  dbpeer.h  dialer.cpp  game.h  glistener.cpp  glistener.h  gpeer.cpp  gpeer.h  listener.cpp  main.cpp  peer.cpp  peer.h  pingtimer.cpp  pingtimer.h  server.cpp  server.h  slistener.cpp  slistener.h  speer.cpp  speer.h  timer.cpp  timer.h  vpeer.cpp  vpeer.h
xx_epoll_test4/: CMakeLists.txt  config.h  config.json  db.cpp  db.h  gpeer.cpp  listener.cpp  listener.h  main.cpp  peer.cpp  peer.h  server.cpp  server.h  vpeer.cpp  vpeer.h
xx_epoll_test5/: CMakeLists.txt  config.h  config.json  dbdialer.cpp  dbdialer.h  dbpeer.cpp  dbpeer.h  gamecontext.h  glistener.cpp  glistener.h  gpeer.cpp  gpeer.h  ldialer.cpp  ldialer.h  lpeer.cpp  lpeer.h  main.cpp  peer.cpp  peer.h  pingtimer.cpp  pkg_game_client.h.inc  pkg_game_client_Game1Player_.inc  pkg_game_client_Game1Scene.cpp  pkg_game_client_Game1Scene_.inc  server.cpp  server.h  timer.cpp  timer.h  vpeer.cpp  vpeer.h
xx_epoll_test6/: CMakeLists.txt  main.cpp
xx_logger_test1/: CMakeLists.txt  log_cfg.json  main.cpp
xx_lua_test1/: CMakeLists.txt  g_coros.lua  g_net.lua  g_objmgr.lua  gen.lua  gen2.lua  main.cpp  objmgr.lua  om.lua  test.lua  test3.lua  test4.lua  test_uv.lua  xx_lua_test1.vcxproj  xx_lua_test1.vcxproj.filters
xx_lua_test2/: CMakeLists.txt  main.cpp  xx_lua_test2.vcxproj
xx_mysql_test1/: CMakeLists.txt  main.cpp
xx_obj_test1/: CMakeLists.txt  main.cpp  xx_obj_test1.vcxproj  xx_obj_test1.vcxproj.filters
xx_queue_test1/: CMakeLists.txt  main.cpp  pod_vector.h  xx_queue_test1.vcxproj  xx_queue_test1.vcxproj.filters
xx_random_test1/: CMakeLists.txt  main.cpp  xx_random_test1.vcxproj
xx_sqlite_test1/: CMakeLists.txt  main.cpp  xx_sqlite_test1.vcxproj  xx_sqlite_test1.vcxproj.filters
xx_uv_test1/: CMakeLists.txt  main.cpp
(+169 files in other folders)
