cmake_minimum_required(VERSION 3.10)
project(all)
 
add_subdirectory(xx_data_cpp_test1)
add_subdirectory(xx_obj_test1)
add_subdirectory(xx_lua_test1)
add_subdirectory(xx_queue_test1)
add_subdirectory(xx_threadpool_test1)
add_subdirectory(xx_string_test1)
add_subdirectory(xx_mysql_test1)
add_subdirectory(xx_logger_test1)
add_subdirectory(xx_uv_test1)
add_subdirectory(xx_dict_test1)
add_subdirectory(xx_math_test1)
add_subdirectory(xx_asio_test1)
add_subdirectory(xx_asio_test3)
add_subdirectory(xx_coro_test1)
add_subdirectory(xx_coro_test2)
if(UNIX)
    add_subdirectory(xx_asio_test2)
    add_subdirectory(xx_epoll_test1)
    add_subdirectory(xx_epoll_test2)
    add_subdirectory(xx_epoll_test3)
    add_subdirectory(xx_epoll_test4)
    add_subdirectory(xx_epoll_test5)
endif()
